log
Wed, Apr 16, 2025 10:14:20 PM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Thu, Apr 17, 2025  4:46:49 PM: 
 hashmap.c | 30 +++++++++++++++++++++++++++---
 1 file changed, 27 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:46:32: error: comparison between pointer and integer [-Werror]
     while(map->buckets[indice] != -1 && map->buckets[indice]->key != -1 ){
                                ^~
hashmap.c:46:67: error: comparison between pointer and integer [-Werror]
     while(map->buckets[indice] != -1 && map->buckets[indice]->key != -1 ){
                                                                   ^~
cc1.exe: all warnings being treated as errors
441b173
Thu, Apr 17, 2025  4:47:26 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:46:32: error: comparison between pointer and integer [-Werror]
     while(map->buckets[indice] != -1 && map->buckets[indice]->key != -1 ){
                                ^~
hashmap.c:46:67: error: comparison between pointer and integer [-Werror]
     while(map->buckets[indice] != -1 && map->buckets[indice]->key != -1 ){
                                                                   ^~
cc1.exe: all warnings being treated as errors
d52e860
Thu, Apr 17, 2025  4:47:34 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b5ebc32
Thu, Apr 17, 2025  4:49:20 PM: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  5|4
total_score: 30/70
2ef0ca2
Thu, Apr 17, 2025  4:56:05 PM: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:99:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return indice;
            ^~~~~~
cc1.exe: all warnings being treated as errors
e36e825
Thu, Apr 17, 2025  5:08:55 PM: 
 hashmap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
443c6db
Thu, Apr 17, 2025  5:22:58 PM: 
 hashmap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:113:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return indice;
            ^~~~~~
cc1.exe: all warnings being treated as errors
f65ac3b
Thu, Apr 17, 2025  5:25:24 PM: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  7|3
total_score: 40/70
54f853e
Thu, Apr 17, 2025  5:26:48 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|2
total_score: 50/70
58fecb5
Thu, Apr 17, 2025  5:30:39 PM: 
 hashmap.c | 18 ++++++++----------
 1 file changed, 8 insertions(+), 10 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:100:19: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     long indice = searchMap(map, key);
                   ^~~~~~~~~
hashmap.c:101:10: error: passing argument 1 of 'free' makes pointer from integer without a cast [-Werror=int-conversion]
     free(indice);
          ^~~~~~
In file included from test.c:2:0:
c:\users\vicen\onedrive\escritorio\progra\mingw\include\stdlib.h:487:39: note: expected 'void *' but argument is of type 'long int'
 _CRTIMP __cdecl __MINGW_NOTHROW  void free (void *);
                                       ^~~~
cc1.exe: all warnings being treated as errors
6da4338
Thu, Apr 17, 2025  5:31:17 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:100:27: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     Pair** deleteBucket = searchMap(map, key);
                           ^~~~~~~~~
cc1.exe: all warnings being treated as errors
4ecbf64
Thu, Apr 17, 2025  5:37:18 PM: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
c9ac2c9
Thu, Apr 17, 2025  5:38:06 PM: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  9|2
total_score: 50/70
1f02dbd
Thu, Apr 17, 2025  5:40:27 PM: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  11|2
total_score: 50/70
5250419
Thu, Apr 17, 2025  5:41:34 PM: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  14|1
total_score: 60/70
e972eda
Thu, Apr 17, 2025  5:46:29 PM: 
 hashmap.c | 20 +++++++++++++-------
 1 file changed, 13 insertions(+), 7 deletions(-)
 tests:  14|1
total_score: 60/70
3f5b3c1
Fri, Apr 18, 2025  3:57:11 PM: 
 hashmap.c | 25 +++++--------------------
 1 file changed, 5 insertions(+), 20 deletions(-)
 tests:  17|0
total_score: 70/70
6d17158
